@@ -2,7 +2,7 @@ Package: rugarch
 Type: Package
 Title: Univariate GARCH Models
 Version: 1.4-0
-Date: 2017-11-14
+Date: 2018-01-28
 Authors@R: c(person("Alexios", "Ghalanos", role = c("aut", "cre"), email = "alexios@4dscape.com"))
 Depends: R (>= 3.0.2), methods, parallel
 LinkingTo: Rcpp (>= 0.10.6), RcppArmadillo (>= 0.2.34)
